# juce-llvm-dev-container

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile-devcontainer  devcontainer.json  git-prompt-bashrc-fragment  llvm-15.list  postCreateCommand.sh
GUI/: CMakeLists.txt
Plugin/: CMakeLists.txt
audio-plugin-example/: CMakeLists.txt
